Prevent scrollbars on desktop
Fancy box will dynamically set css `overflow` based on whether device
accepts touch input or not. Touch-enabled laptops throw this for a
loop, so now on all large screen, we’ll hide scrollbars.

--- a/css/als_lightbox.css
+++ b/css/als_lightbox.css
@@ -116,3 +116,8 @@
     }
 
 }
+
+@media (min-width: 800px) {
+	/* Desktop only. */
+	.als_fancybox .fancybox-inner { overflow: hidden !important; }
+}
